preserveValue Tests